swagger reviews i whislist i documentacio
