# src/routes/cart.routes.js
@@ -5,6 +5,7 @@ import {
   getCartByIdController,
   addItemController,
   checkoutController,
+  removeItemController,
 } from "../controllers/cart.controller.js"
 
 const router = express.Router()
@@ -12,6 +13,7 @@ const router = express.Router()
 router.get("/", authMiddleware, getCartController)
 router.get("/:cartId", authMiddleware, getCartByIdController)
 router.post("/items", authMiddleware, addItemController)
+router.delete("/items/:itemID", authMiddleware, removeItemController)
 router.post("/checkout", authMiddleware, checkoutController)
 
 export default router
